fix text align fix image margin

--- a/css/tripper.css
+++ b/css/tripper.css
@@ -507,3 +507,7 @@
   text-decoration: underline;
   display: inline-block;
 }
+
+.subMargin30{
+  margin-bottom: 10px;
+}
